fixed the html templating

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -15,12 +15,13 @@
 
 <script type="text/javascript">
     // create an array with nodes
+    // for loop: for each thing we want a vis data set. can we use networkx?
     var nodes = new vis.DataSet([
-        {id: 1, label: 'Node 1'},
-        {id: 2, label: 'Node 2'},
-        {id: 3, label: 'Node 3'},
-        {id: 4, label: 'Node 4'},
-        {id: 5, label: 'Node 5'}
+        {id: 1, label: 'Student 1'},
+        {id: 2, label: 'Student 2'},
+        {id: 3, label: 'Student 3'},
+        {id: 4, label: 'Student 4'},
+        {id: 5, label: 'Student 5'}
     ]);
 
     // create an array with edges
