basic form structure implemented. now lets clean it up!

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -12,7 +12,7 @@ body {font-family: Helvetica, sans-serif; align: center; width: 500px}
 
 .networks {
     display: none;
-    height:500px
+    height:500px;
 }
 
 .simulation-container {
@@ -177,7 +177,7 @@ body {font-family: Helvetica, sans-serif; align: center; width: 500px}
         var container;
         var options, data;
 
-
+        //idea: we get all of the containers. We draw the graph on all the containers. We edit slightly based on
         // This method is responsible for drawing the graph, returns the drawn network
         function drawGraph() {
             var container = document.getElementById('s');
