Just have to get the graphs to embed properly, then we're golden!

--- a/templates/form.html
+++ b/templates/form.html
@@ -10,7 +10,9 @@
 <form id="frm" action="/action_page.php">
     How many students: <input type="text" name="s"><br>
     How many tangential contacts: <input type="text" name="t"><br>
-    How many close contacts per student: <input type="text" name="c"><br><br>
+    How many close contacts per student: <input type="text" name="c"><br>
+    How many students would you like randomly tested per day? <input type="text" name="tests"><br>
+    How many runs would you like to simulate? <input type="text" name="mode"><br><br>
     <input type="button" onclick="myFunction()" value="View Graph">
 </form>
 
